test(ui): ui tests added